fix: make id generation and the transition table deterministic
`docs/test-cases/*.html` is committed, and every `mvn test` re-dirtied ten of
them. That is not a reporting nuisance — two of the three causes are real
defects in shipped code:

- `OrderStateMachine.transfers()` built its table with `Map.copyOf`, whose
  iteration order is salted per JVM. The public accessor therefore returned
  the state machine in a different order on every boot. Now a
  `LinkedHashMap`, which preserves the declaration order — transitions
  grouped by from-state, the order a reader expects.
- `SnowflakeIdGenerator` read `System.currentTimeMillis()` directly, so the
  one knob that freezes time could not freeze id generation. It now takes the
  shared `Clock` bean; under a fixed clock the sequence is reproducible.

The third is genuine nondeterminism and stays that way: which racer wins in
`LockNewReportTest` is the point of the test. Only the report rows are now
sorted — the outcome multiset is the claim being made, not who drew which
outcome.

`SnowflakeIdGenerator` deliberately keeps a single constructor. A convenience
overload would sit next to `AppClock`, which is itself a `Clock` wrapper, and
the two would be one import away from being silently swapped at a call site.

Reports regenerated; three consecutive full runs now produce byte-identical
output, screenshots included.